# OMuProCU-utils

./: .gitignore  .gitmodules  MANIFEST.in  README.md  generate_protobufs.sh  pyproject.toml  requirements.txt  setup.py
protos/bfrt_proto/: bfruntime.proto
protos/til/: md_orchestrator_msg.proto  orchestrator_msg.proto  tif_control.proto  til_msg.proto  time_measurement.proto
src/orchestrator_utils/: config.py  device_categories.py  md_orchestrator_client.py  orchestrator_client.py  orchestrator_utils.py  states.py  validator.py
src/orchestrator_utils/bfrt_proto/: bfruntime_pb2.py  bfruntime_pb2_grpc.py
src/orchestrator_utils/logger/: logger.py
src/orchestrator_utils/p4/bmv2/: convert.py  helper.py
src/orchestrator_utils/p4/config/v1/: p4info_pb2.py
src/orchestrator_utils/p4/server/v1/: config_pb2_grpc.py
src/orchestrator_utils/p4/v1/: p4runtime_pb2.py  p4runtime_pb2_grpc.py
src/orchestrator_utils/tcc/: tenant_communication_controller.py
src/orchestrator_utils/til/: md_orchestrator_msg_pb2.py  md_orchestrator_msg_pb2_grpc.py  orchestrator_msg_pb2.py  orchestrator_msg_pb2_grpc.py  tif_control_pb2.py  til_msg_pb2.py  til_msg_pb2_grpc.py  time_measurement_pb2.py  time_measurement_pb2_grpc.py
src/orchestrator_utils/tools/: accelerator_type.py  countermeasure_action.py  persistence.py  runtime_table_action.py
