[project]
name = "orchestrator-utils"
version = "0.2.2"
authors = [
  { name="Timo Geier", email="timo.geier@cs.hs-fulda.de" },
]
dependencies = [
  'click==8.1.3', 
  'grpcio==1.56.2', 
  'grpcio-reflection==1.43.0', 
  'grpcio-tools==1.56.2', 
  'mypy-protobuf==3.5.0', 
  'protobuf==4.23.4', 
  'protobuf3==0.2.1', 
  'six==1.16.0', 
  'types-protobuf==4.23.0.3', 
  'kubernetes==24.2.0', 
  'kubernetes-validate==1.24.0'
  ]
license = { file = 'LICENSE' }
description = "OMuProCU Utility Framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"